--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -2,6 +2,6 @@
 <div class="intro-image">
 </div>
 <div class="intro-content">
-  <h1>Beth Weidl</h1>
-  <h2>Lorem ipsum dolor</h2>
+  <h1>Elizabeth Weidl</h1>
+  <h3>community manager/writer/content strategist</h3>
 </div>
