--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -1,6 +1,10 @@
-@import url(http://fonts.googleapis.com/css?family=Libre+Baskerville:400,300,700,300italic);
+@import url(http://fonts.googleapis.com/css?family=Volkhov:400,700,400italic);
 @import "../bower_components/font-awesome/scss/font-awesome";
 
-@mixin libre-baskerville {
-  font-family: 'Libre Baskerville', serif;
+@mixin volkhov {
+  font-family: 'Volkhov', serif;
+}
+
+@mixin helvetica {
+  font-family: helvetica, sans-serif;
 }
