--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@
 @import "variables";
 @import "bootstrap";
 @import "fonts";
+@import "mixins";
 
 @import "nav";
 @import "intro";
@@ -18,10 +19,9 @@ html {
 
 body {
     color: $text-color;
-    @include libre-baskerville;
     height: 100%;
   	background-color: white;
-  	font-size: 1.125em;
+  	font-size: 16px;
   	font-family: 'Libre Baskerville', serif;
   	font-weight: 400;
   	line-height: 1.45;
@@ -39,6 +39,7 @@ h1, h2, h3, h4 {
 h1 {
   	margin-top: 0;
   	font-size: 3.157em;
+    @include volkhov;
 }
 
 h2 {font-size: 2.369em;}
