--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,3 +1,14 @@
 <div class="about-content">
-  <h1>About</h1>
+  	<div class="container">
+  		<div class="row">
+  	  			<div class="col-sm-9">
+	 			<h1>About Me</h1>
+	  			<h2>Some Subheading</h2>
+				<p>IPhone twee organic, Odd Future Intelligentsia street art fashion axe. Intelligentsia small batch authentic butcher vinyl, salvia cardigan church-key wolf Banksy YOLO hella you probably haven't heard of them cornhole kogi. Ethical viral asymmetrical Schlitz keffiyeh. Sartorial kale chips hashtag mixtape mustache mumblecore.</p>
+				<p>Odd Future seitan, shabby chic iPhone Marfa. Leggings fap yr Pinterest Williamsburg. Godard try-hard typewriter shabby chic Truffaut. Paleo meggings selvage, twee fashion axe Thundercats typewriter Shoreditch cred viral disrupt.</p>
+				<p>IPhone twee organic, Odd Future Intelligentsia street art fashion axe. Intelligentsia small batch authentic butcher vinyl, salvia cardigan church-key wolf Banksy YOLO hella you probably haven't heard of them cornhole kogi. Ethical viral asymmetrical Schlitz keffiyeh. Sartorial kale chips hashtag mixtape mustache mumblecore.</p>
+				<p>Odd Future seitan, shabby chic iPhone Marfa. Leggings fap yr Pinterest Williamsburg. Godard try-hard typewriter shabby chic Truffaut. Paleo meggings selvage, twee fashion axe Thundercats typewriter Shoreditch cred viral disrupt.</p>
+			</div>
+		</div>
+	</div>
 </div>
