--- a/app/templates/work.hbs
+++ b/app/templates/work.hbs
@@ -1,3 +1,24 @@
 <div class="work-content">
-  <h1>Work</h1>
+  	<div class="container">
+  		<div class="row">
+  	  		<div class="col-sm-6">
+  	  			1
+			</div>
+  	  		<div class="col-sm-6">
+  	  			1
+			</div>
+			<div class="col-sm-6">
+  	  			1
+			</div>
+			<div class="col-sm-6">
+  	  			1
+			</div>
+			<div class="col-sm-6">
+  	  			1
+			</div>
+			<div class="col-sm-6">
+  	  			1
+			</div>
+		</div>
+	</div>
 </div>
