--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -1,7 +1,6 @@
 
 <div class="intro-image">
 </div>
-<div class="intro-content">
-  <h1>Elizabeth Weidl</h1>
-  <h3>community manager/writer/content strategist</h3>
-</div>
+<h1>
+	<span data-shadow-text="Beth Weidl">Beth Weidl</span><br />community manager / writer
+</h1>
