--- a/app/templates/work.hbs
+++ b/app/templates/work.hbs
@@ -1,23 +1,17 @@
 <div class="work-content">
   	<div class="container">
   		<div class="row">
-  	  		<div class="col-sm-6">
-  	  			1
+  	  		<div class="col-sm-6 project-item">
 			</div>
-  	  		<div class="col-sm-6">
-  	  			1
+  	  		<div class="col-sm-6 project-item">
 			</div>
-			<div class="col-sm-6">
-  	  			1
+			<div class="col-sm-6 project-item">
 			</div>
-			<div class="col-sm-6">
-  	  			1
+			<div class="col-sm-6 project-item">
 			</div>
-			<div class="col-sm-6">
-  	  			1
+			<div class="col-sm-6 project-item">
 			</div>
-			<div class="col-sm-6">
-  	  			1
+			<div class="col-sm-6 project-item">
 			</div>
 		</div>
 	</div>
