--- a/app/templates/work.hbs
+++ b/app/templates/work.hbs
@@ -1,17 +1,20 @@
 <div class="work-content">
   	<div class="container">
   		<div class="row">
-  	  		<div class="col-sm-6 project-item">
+  			<div class="col-xs-10">
+  				<h2>Selected Work</h2>
 			</div>
-  	  		<div class="col-sm-6 project-item">
+  	  		<div class="col-xs-5 project-item">
 			</div>
-			<div class="col-sm-6 project-item">
+  	  		<div class="col-xs-5 project-item">
 			</div>
-			<div class="col-sm-6 project-item">
+			<div class="col-xs-5 project-item">
 			</div>
-			<div class="col-sm-6 project-item">
+			<div class="col-xs-5 project-item">
 			</div>
-			<div class="col-sm-6 project-item">
+			<div class="col-xs-5 project-item">
+			</div>
+			<div class="col-xs-5 project-item">
 			</div>
 		</div>
 	</div>
